ci/analytics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics
  namespace: xetdev
spec:
  replicas: 1
  selector:
    matchLabels:
      project: analytics
  template:
    metadata:
      labels:
        project: analytics
    spec:
      containers:
        - name: analytics
          image: hub.66bit.ru/urfu-2023-rtf/xetdevelopment/xetdev/analytics:latest
          ports:
            - containerPort: 7133
      imagePullSecrets:
        - name: xetium-secret
