ci/database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: xetium-postgres
  namespace: xetdev
spec:
  selector:
    matchLabels:
      app: xetium-postgres
  replicas: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: xetium-postgres
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: xetium-postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: xetium-postgres-volume
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: xetium-postgres-volume
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "rook-ceph-block"
        resources:
          requests:
            storage: 4Gi
