ci/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: xetdev
spec:
  replicas: 1
  selector:
    matchLabels:
      project: gateway
  template:
    metadata:
      labels:
        project: gateway
    spec:
      containers:
        - name: gateway
          image: hub.66bit.ru/urfu-2023-rtf/xetdevelopment/xetdev/gateway:latest
          ports:
            - containerPort: 5000
      imagePullSecrets:
        - name: xetium-secret
