ci/project.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project
  namespace: xetdev
spec:
  replicas: 1
  selector:
    matchLabels:
      project: project
  template:
    metadata:
      labels:
        project: project
    spec:
      containers:
        - name: project
          image: hub.66bit.ru/urfu-2023-rtf/xetdevelopment/xetdev/project:latest
          ports:
            - containerPort: 7110
      imagePullSecrets:
        - name: xetium-secret
